missed the menu, only issue on small screens

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -628,6 +628,10 @@ a:hover {
   padding-right: $padding15;
   background-color: $body-main-bar-bg-color !important;
 
+  #mainNavToggle {
+    background-color: $body-main-bar-bg-color !important;
+  }
+  
   h2 {
     margin-bottom: 5px;
   }
